plugins {
    id 'com.android.application'
    id 'kotlin-android'
    id 'kotlin-parcelize'
    id 'com.google.gms.google-services'
    id 'com.jakewharton.butterknife'

}

android {
    compileSdk 34

    defaultConfig {
        applicationId "com.profitz.app"
        minSdk 29
        targetSdk 31
        versionCode 14
        vectorDrawables.useSupportLibrary = true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        javaCompileOptions {
            annotationProcessorOptions {
                arguments = ["dagger.formatGeneratedSource": "enabled"]
            }
        }
    }
    tasks.withType(JavaCompile).configureEach {
        options.fork = true
        options.forkOptions.jvmArgs += [
                '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
        ]
    }
    useLibrary 'org.apache.http.legacy'

    signingConfigs {
        release {
            keyAlias 'androiddebugkey'
            keyPassword 'android'
            storePassword 'android'
            storeFile file('../keystore/debug.keystore')
        }
    }
    lintOptions {
        checkReleaseBuilds false
        // Or, if you prefer, you can continue to check for errors in release builds,
        // but continue the build even when errors are found:
        abortOnError false
    }
    buildTypes {

        release {
            minifyEnabled false
            debuggable false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.release
        }
        debug {
            minifyEnabled false
            debuggable false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.debug


        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8

        // If using Java

    }

    kotlinOptions {
        jvmTarget = '1.8'
    }
    buildFeatures {
        prefab true
    }
    namespace 'com.profitz.app'
    configurations {
        implementation.exclude module:'protobuf-java'
        implementation.exclude module:'proto-google-common-protos'
        implementation.exclude module:'protolite-well-known-types'
        //implementation.exclude module:'protobuf-lite'
    }
    packagingOptions { resources.excludes.add("META-INF/*") }
}
ext {
    supportLibVersion = '28.0.0'
    constraintLayoutVersion = '1.0.2'
    butterKnifeVersion = '8.8.1'
    rxJavaVersion = '2.1.9'
    rxAndroidVersion = '2.0.2'
    gsonVersion = '2.8.5'
    retrofitVersion = '2.3.0'
    adapterRxJava2Version = '2.3.0'
    picassoVersion = '2.5.2'
    firebaseMessagingVersion = "21.1.0"

    jUnitVersion = '4.12'
    espressoCoreVersion = '3.5.1'
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation platform('com.google.firebase:firebase-bom:30.2.0')
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.10.0'
    implementation project(path: ':SuperBottomSheetNew')
    implementation 'com.google.firebase:firebase-appcheck-playintegrity:17.1.1'
    // implementation 'com.github.andrefrsousa:SuperBottomSheet:2.0.0'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC3'
    implementation  'jp.wasabeef:picasso-transformations:2.2.1'
    implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
    implementation 'com.makeramen:roundedimageview:2.3.0'
    implementation 'com.github.jgabrielfreitas:BlurImageView:1.0.1'
    implementation 'com.eightbitlab:blurview:1.6.6'
    implementation 'com.joooonho:selectableroundedimageview:1.0.1'
    implementation 'nl.dionsegijn:konfetti:1.3.2'
    implementation 'com.android.tools:common:latest_version'

    implementation platform('com.google.firebase:firebase-bom:28.4.2')

    implementation 'jp.wasabeef:blurry:4.0.0'
    // Android Framework Libraries
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'com.google.android.material:material:1.10.0'
    // Binding Libraries
    implementation 'com.jakewharton:butterknife:10.2.3'
    androidTestImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'

    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.5'
    implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'

    implementation "androidx.interpolator:interpolator:1.0.0"

    implementation 'com.github.zcweng:switch-button:0.0.3@aar'
    api 'com.github.addisonElliott:RippleDrawable:3.0.0'


    // Reactive Libraries
    implementation "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}"
    implementation "io.reactivex.rxjava2:rxjava:${rxJavaVersion}"

    // JSON & Networking Libraries
    implementation "com.google.code.gson:gson:${gsonVersion}"
    implementation "com.squareup.retrofit2:retrofit:${retrofitVersion}"
    implementation "com.squareup.retrofit2:converter-gson:${retrofitVersion}"
    implementation "com.squareup.retrofit2:adapter-rxjava2:${adapterRxJava2Version}"
    implementation 'com.google.gms:google-services:4.4.0'


    implementation('com.github.nkzawa:socket.io-client:0.4.2') {
        exclude group: 'org.json', module: 'json'
    }
    // implementation 'com.goebl:david-webb:1.3.0'
    // UI Libraries
    implementation "com.squareup.picasso:picasso:${picassoVersion}"
    implementation 'com.loopj.android:android-async-http:1.4.9'
    // Testing Libraries
    testImplementation "junit:junit:${jUnitVersion}"


    implementation 'com.github.florent37:singledateandtimepicker:2.2.3'
    implementation 'com.github.jjobes:slideDateTimePicker:1.0.2'
    // implementation 'io.customerly:customerly-android-sdk:3.0.8'
    //implementation project(':customerly-android-sdk')
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.22"
    implementation "org.jetbrains.kotlin:kotlin-reflect:1.8.22"
    implementation 'com.android.volley:volley:1.2.1'
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
    implementation 'com.paypal.sdk:paypal-android-sdk:2.16.0'
    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
    implementation 'com.thebluealliance:spectrum:0.7.1'
    implementation 'com.google.firebase:firebase-messaging'
    implementation 'com.google.firebase:firebase-analytics:21.5.0'
    implementation 'com.google.firebase:firebase-database:20.3.0'
    implementation 'com.google.firebase:firebase-auth:22.3.0'
    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.1.2'

    implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
    implementation 'com.thefinestartist:finestwebview:1.2.7'
    implementation 'com.github.GrenderG:Toasty:1.5.2'

    implementation 'com.github.esafirm.android-image-picker:imagepicker:2.0.0'
    implementation 'com.github.bumptech.glide:glide:4.9.0'
    implementation 'com.tbuonomo:dotsindicator:4.2'

    implementation 'androidx.preference:preference:1.2.1'
    implementation 'com.etebarian:meow-bottom-navigation-java:1.2.0'
    //implementation 'com.github.lsjwzh.RecyclerViewPager:lib:v1.1.1'
    // implementation 'com.etebarian:meow-bottom-navigation:1.3.1'
    implementation 'com.github.rubensousa:gravitysnaphelper:2.2.1'
    implementation 'me.rishabhkhanna:RecyclerviewSwipeDrag:1.3.1'
    implementation 'com.yarolegovich:discrete-scrollview:1.5.1'
    // implementation 'com.sdsmdg.harjot:materialshadows:1.2.5'
    //implementation 'com.h6ah4i.android.materialshadowninepatch:materialshadowninepatch:1.0.0'
    //implementation 'com.github.devlight.shadowlayout:library:1.0.2'
    // implementation 'com.github.amlcurran.showcaseview:library:5.4.3'
    implementation 'com.github.deano2390:MaterialShowcaseView:1.3.4@aar'
    implementation 'com.robertlevonyan.view:CustomFloatingActionButton:3.0.1'
    implementation 'de.hdodenhof:circleimageview:3.1.0'
    // implementation 'com.github.andrefrsousa:SuperBottomSheet:2.0.0'
    implementation 'com.github.kimkevin:cachepot:1.2.0'
    implementation 'com.airbnb.android:lottie:3.4.4'
    implementation 'com.google.firebase:firebase-firestore:24.9.1'
    implementation 'com.google.firebase:firebase-auth:22.3.0'
    implementation 'com.google.firebase:firebase-messaging:23.3.1'
    implementation 'com.google.android.gms:play-services-location:21.0.1'
    implementation 'com.google.android.gms:play-services-analytics:18.0.4'
    implementation 'com.google.android.gms:play-services-ads:22.5.0'
    implementation 'com.google.android.gms:play-services-basement:18.2.0'
    implementation 'com.firebaseui:firebase-ui-auth:3.3.1'
    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.1.2'

    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
    implementation 'com.karumi:dexter:5.0.0'
    implementation 'androidx.browser:browser:1.7.0'
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'io.sentry:sentry-android:3.1.0'
    // implementation 'com.suddenh4x.ratingdialog:awesome-app-rating:2.3.0'
    implementation 'com.stepstone.apprating:app-rating:2.3.1'
    implementation 'pub.devrel:easypermissions:3.0.0'
    implementation 'com.github.gotev:android-upload-service:4.5.1'
    implementation 'com.github.pwittchen:swipe-rx2:0.3.0'
    implementation "androidx.games:games-frame-pacing:2.1.0"
    implementation 'org.jsoup:jsoup:1.13.1'
    implementation 'com.legendmohe.maven:slidingdrawabletablayout:0.1'
    // To use the Android Performance Tuner
    implementation 'com.thoughtbot:expandablerecyclerview:1.4'
    implementation 'com.thoughtbot:expandablecheckrecyclerview:1.4'
    implementation 'com.github.aabhasr1:OtpView:v1.1.2'
    implementation "androidx.games:games-performance-tuner:1.6.0"
    implementation "com.github.florent37:diagonallayout:1.1.1"
    implementation 'com.hbb20:ccp:2.4.7'
    implementation 'com.google.android.play:core:1.10.3'
    implementation 'com.jaeger.statusbarutil:library:1.5.1'
    implementation 'com.squareup:seismic:1.0.3'
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'

}
